- Update to 2.1.9 - Use USE_RC_SUBR - Use SUB_FILES - Remove USE_REINPLACE
PR:		95627
Submitted by:	maintainer